--- a/Dockerfile.assisted-service-debug
+++ b/Dockerfile.assisted-service-debug
@@ -2,9 +2,10 @@ FROM registry.access.redhat.com/ubi9/go-toolset:1.25 AS golang
 
 RUN GOFLAGS=-mod=mod go install github.com/go-delve/delve/cmd/dlv@v1.21.2
 
-FROM quay.io/centos/centos:stream9 AS builder
+FROM registry.access.redhat.com/ubi9/ubi:latest@sha256:3816d303e75dec4da2d10eeb9e8651eef4393721598bea4690c607282635aa57 AS builder
 
-RUN dnf install --enablerepo=crb -y gcc git nmstate-devel openssl-devel make && dnf clean all
+RUN dnf install -y gcc git nmstate-devel openssl-devel make && \
+    dnf clean all
 
 ENV GOROOT=/usr/lib/golang
 ENV GOPATH=/opt/app-root/src/go
@@ -21,9 +22,9 @@ RUN git config --global --add safe.directory /opt/app-root/src
 COPY . ./assisted-service
 RUN cd ./assisted-service && make build-minimal
 
-FROM quay.io/centos/centos:stream9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest@sha256:6fc28bcb6776e387d7a35a2056d9d2b985dc4e26031e98a2bd35a7137cd6fd71
 
-RUN dnf install --enablerepo=crb -y nmstate-devel
+RUN microdnf install -y nmstate nmstate-libs && microdnf clean all
 
 ARG DEBUG_SERVICE_PORT=40000
 EXPOSE 8090 $DEBUG_SERVICE_PORT
