MGMT-22656: Remove serviceMesh & kserve from DataScienceCluster spec for SNO cluster

--- a/internal/operators/openshiftai/templates/custom/datasciencecluster.yaml
+++ b/internal/operators/openshiftai/templates/custom/datasciencecluster.yaml
@@ -13,7 +13,7 @@ spec:
             type: OpenshiftDefaultIngress
         managementState: Managed
         name: knative-serving
-      managementState: Managed
+      managementState: {{ if .IsSNO }}Removed{{ else }}Managed{{ end }}
     trustyai:
       managementState: Removed
     ray:
